2019-10-24  Ilya Leoshkevich  <iii@linux.ibm.com>

	* gcc.target/s390/load-thread-pointer-once-2.c: New test.

2019-10-24  Richard Biener  <rguenther@suse.de>

	* gcc.dg/vect/slp-reduc-9.c: New testcase.

2019-10-23  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.target/powerpc/pr70010.c: Add -Wno-psabi.
	* gcc.target/powerpc/pr70010-[12].c: Require LTO.
	* gcc.target/powerpc/pr91275.c: Add -mcpu=power8.

2019-10-23  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/65930
	* gcc.dg/vect/vect-reduc-2char-big-array.c: Adjust.
	* gcc.dg/vect/vect-reduc-2char.c: Likewise.
	* gcc.dg/vect/vect-reduc-2short.c: Likewise.
	* gcc.dg/vect/vect-reduc-dot-s8b.c: Likewise.
	* gcc.dg/vect/vect-reduc-pattern-2c.c: Likewise.

2019-10-23  Jakub Jelinek  <jakub@redhat.com>

	* g++.dg/cpp2a/constexpr-dtor3.C: Expect in 'constexpr' expansion of
	message on the line with variable declaration.
	* g++.dg/ext/constexpr-attr-cleanup1.C: Likewise.

2019-10-23  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/20191023-1.c: New test.

2019-10-23  Martin Liska  <mliska@suse.cz>

	PR ipa/91969
	* g++.dg/ipa/pr91969.C: New test.

2019-10-22  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/85746
	* g++.dg/pr85746.C: New file.

2019-10-22  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92173
	* gcc.dg/torture/pr92173.c: New testcase.

2019-10-22  Michael Matz  <matz@suse.de>

	PR middle-end/90796
	* gcc.dg/unroll-and-jam.c: Add three invalid and one valid case.

2019-10-22  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92173
	* gcc.dg/torture/pr92173.c: New testcase.

2019-10-22  Richard Sandiford  <richard.sandiford@arm.com>

	* g++.dg/diagnostic/aka5.h: New test.
	* g++.dg/diagnostic/aka5a.C: Likewise.
	* g++.dg/diagnostic/aka5b.C: Likewise.
	* g++.target/aarch64/diag_aka_1.C: Likewise.

2019-10-22  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.dg/Wnonnull.c: Provide prototypes for strlen and memcpy.
	Use __SIZE_TYPE__ instead of size_t.
